sql/test/BugTracker-2026/Tests/7815-ALGmarkselect-crash.test
query I nosort
SELECT CAST( CAST( '-0.0' AS NUMERIC ) AS BIGINT )
  FROM (
    SELECT 2 AS x
    UNION
    SELECT DISTINCT * FROM generate_series( CAST( '6' AS BIGINT ), 5 )
  )
----
0
0

statement error 42000!syntax error, unexpected AS, expecting ',' in: "select cast( cast( '-0.0' as numeric ) as bigint )...
SELECT CAST( CAST( '-0.0' AS NUMERIC ) AS BIGINT )
FROM (
  SELECT CAST(
    (((((
      x NOT IN ( -10 , x * ( 10 ) )
    ) AND (
      -(
        CASE
          WHEN NOT NULL
            THEN 4 * - 48 * 51 * - - 54 * - 77 * 46
          WHEN NOT ( NULL ) IN (
              - ( 9.100000 ) * - 1203170400 ,
              - 41 ,
              (-(
                CASE
                  WHEN NOT NULL
                    THEN 4 * - 48 * 51 * - - 54 * - 77 * 46
                  WHEN NOT ( NULL ) IN (
                      - ( 9.100000 ) * - 1203170400 ,
                      - 41 ,
                      - 14 - - CASE - - 1
                        WHEN - - 82 THEN - - 23
                        WHEN 2 BETWEEN 1 AND 1092
                          THEN NULL NOT IN (
                            SELECT * FROM generate_series( 1, sign(8.400000) ) AS x
                          )
                      END / 46 - - 87 * 52
                  )
                  THEN 56
                  ELSE NULL
                END
              )) ^ - 87 * 52
          )
          THEN 56
          ELSE NULL
        END
      )
    )))) OR ( 'TRUE' )
  AS INT ) AS x
  FROM (
    SELECT 2 AS x
    UNION
    SELECT DISTINCT * FROM generate_series( CAST( '616263' AS BIGINT ), 5 )
  )
) AS x

-- adjusted the query by removing one ( from the 4th line. It now should return error:
--statement error GDK reported error: project1_bte: does not match always
query I
select count(*) from (
SELECT CAST( CAST( '-0.0' AS NUMERIC ) AS BIGINT )
FROM (
  SELECT CAST(
    ((((
      x NOT IN ( -10 , x * ( 10 ) )
    ) AND (
      -(
        CASE
          WHEN NOT NULL
            THEN 4 * - 48 * 51 * - - 54 * - 77 * 46
          WHEN NOT ( NULL ) IN (
              - ( 9.100000 ) * - 1203170400 ,
              - 41 ,
              (-(
                CASE
                  WHEN NOT NULL
                    THEN 4 * - 48 * 51 * - - 54 * - 77 * 46
                  WHEN NOT ( NULL ) IN (
                      - ( 9.100000 ) * - 1203170400 ,
                      - 41 ,
                      - 14 - - CASE - - 1
                        WHEN - - 82 THEN - - 23
                        WHEN 2 BETWEEN 1 AND 1092
                          THEN NULL NOT IN (
                            SELECT * FROM generate_series( 1, sign(8.400000) ) AS x
                          )
                      END / 46 - - 87 * 52
                  )
                  THEN 56
                  ELSE NULL
                END
              )) ^ - 87 * 52
          )
          THEN 56
          ELSE NULL
        END
      )
    )))) OR ( 'TRUE' )
  AS INT ) AS x
  FROM (
    SELECT 2 AS x
    UNION
    SELECT DISTINCT * FROM generate_series( CAST( '616263' AS BIGINT ), 5 )
  )
) AS x ) as c
----
616259

-- Program terminated with signal SIGSEGV, Segmentation fault.
-- #0  0x00007f641ad953da in ALGmarkselect (ctx=0x35e0b490, r1=0x7f63841e7870, r2=0x7f63841e7890, gid=0x7f63841e7670, mid=0x7f63841e77d0, pid=0x7f63841e7830, Any=0x7f63841e7750 "\001") at MonetDB/monetdb5/modules/kernel/algebra.c:412
-- 412				if (pi[n] == TRUE && mi[n] == TRUE)
-- [Current thread is 1 (Thread 0x7f63ba63a6c0 (LWP 29784))]

